--- a/.github/workflows/oop.yml
+++ b/.github/workflows/oop.yml
@@ -12,8 +12,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     defaults:
-      run:
-        working-directory: ./${{ github.event.pull_request.title }}
+    #   run:
+    #     working-directory: ./${{ github.event.pull_request.title }}
     steps:
       - uses: actions/checkout@v3
       
